--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@firebase/database": "^0.13.5",
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "firebase": "^9.9.3",
+    "vue": "^2.6.10",
+    "vue-router": "3.6.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.4",
