--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "core-js": "^2.6.5",
     "firebase": "^9.9.3",
     "vue": "^2.6.10",
-    "vue-router": "3.6.4"
+    "vue-router": "^3.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.4",
